Improved shading a bit, updated README

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 The Zeppelin project
 
+Requires PyGame (http://www.pygame.org)
+
 Needs PGU for gui stuff. Download http://code.google.com/p/pgu/downloads/detail?name=pgu-0.12.3.zip&can=2&q= and either install it, or copy the "pgu" and "data" directories into the game's directory.
+
+Depends on PIL (http://www.pythonware.com/library/pil) for ship shading, but will work without it.
